--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Jian‑Zhai (Francis) Zhang">
   <meta name="twitter:description" content="Engineering & system science student focused on AI, materials design and optimization.">
-  <meta name="twitter:image" content="images/hero.jpg">
+  <meta name="twitter:image" content="images/Francis.jpg">
   <meta property="og:title" content="Jian‑Zhai (Francis) Zhang">
   <meta property="og:description" content="Engineering & system science student at National Tsing Hua University.">
   <meta property="og:image" content="images/hero.jpg">
