--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <title>Jian‑Zhai (Francis) Zhang</title>
+  <title>Jian‑Zhai Zhang</title>
   <!-- Description and social metadata -->
-  <meta name="description" content="Jian‑Zhai (Francis) Zhang – engineering & system science student focused on AI‑assisted materials design and computational optimization.">
+  <meta name="description" content="Jian‑Zhai Zhang – engineering & system science student focused on AI‑assisted materials design and computational optimization.">
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:title" content="Jian‑Zhai (Francis) Zhang">
+  <meta name="twitter:title" content="Jian‑Zhai  Zhang">
   <meta name="twitter:description" content="Engineering & system science student focused on AI, materials design and optimization.">
   <meta name="twitter:image" content="images/Francis.jpg">
-  <meta property="og:title" content="Jian‑Zhai (Francis) Zhang">
-  <meta property="og:description" content="Engineering & system science student at National Tsing Hua University.">
-  <meta property="og:image" content="images/hero.jpg">
+  <meta property="og:title" content="Jian‑Zhai  Zhang">
+  <meta property="og:description" content="Undergraduated student in the department of engineering & system science at National Tsing Hua University, Taiwan.">
+  <meta property="og:image" content="images/Francis.jpg">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
