--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
     <!-- Header section with name, tagline and portrait -->
     <div class="header-section">
       <div class="header-frame">
-        <h1>Jian‑Zhai (Francis) Zhang</h1>
-        <h2>Engineering &amp; System Science Student at NTHU</h2>
+        <h1>Jian‑Zhai Zhang, Francis</h1>
+        <h2>Undergraduated student in the department of engineering &amp; system science at NTHU, Taiwan.</h2>
       </div>
       <div class="img-frame">
         <!-- Portrait style hero image.  This file lives in the images directory. -->
-        <img id="propic" src="images/hero.jpg" alt="Electrical engineering lab">
+        <img id="propic" src="images/Francis.jpg" alt="Electrical engineering lab">
       </div>
     </div>
     <!-- Navigation links for different sections.  Feel free to jump to anchors. -->
