--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
     <div class="header-section">
       <div class="header-frame">
         <h1>Jian‑Zhai Zhang, Francis</h1>
-        <h2>Undergraduated student in the department of engineering &amp; system science at NTHU, Taiwan.</h2>
+        <!-- Corrected the tagline grammar ("Undergraduated" → "Undergraduate") and kept the original formatting. -->
+        <h2>Undergraduate student in the department of engineering &amp; system science at NTHU, Taiwan.</h2>
       </div>
       <div class="img-frame">
-        <!-- Portrait style hero image.  This file lives in the images directory. -->
-        <img id="propic" src="images/Francis.jpg" alt="Electrical engineering lab">
+        <!-- Portrait style hero image.  Updated alt text to more accurately describe the picture for accessibility. -->
+        <img id="propic" src="images/Francis.jpg" alt="Portrait of Francis Zhang" loading="lazy">
       </div>
     </div>
     <!-- Navigation links for different sections.  Feel free to jump to anchors. -->
@@ -37,7 +38,8 @@
       <a href="#skills" style="color: rgb(255, 68, 107);">skills</a>
       <a href="mailto:Frank20040506@gmail.com" style="color: rgb(0, 153, 220);">email</a>
       <a href="tel:+886900090270" style="color: rgb(74, 74, 77);">phone</a>
-      <a href="My%20CV.docx" download style="color: rgb(255, 68, 107);">CV</a>
+      <!-- The CV document is not included in this repository.  Convert the link into a placeholder with a tooltip to avoid broken downloads. -->
+      <a href="#" title="CV coming soon" style="color: rgb(255, 68, 107);">CV</a>
     </div>
     <!-- Biography switcher.  Buttons allow the reader to toggle between short bio, detailed bio, projects and skills. -->
     <div class="bio-switcher">
@@ -65,7 +67,10 @@
         </p>
         <p>
           <span id="education"></span>
-          <strong>Education:</strong> National Tsing Hua University, B.S. Engineering &amp; System Science (Sep&nbsp;2022 – Jun&nbsp;2026)<a href="【474907660462925†L71-L115】" class="citation">[1]</a>.  Francis plans to pursue graduate studies in engineering with a focus on machine learning and inverse problems.
+          <strong>Education:</strong> National Tsing Hua University, B.S. Engineering &amp; System Science (Sep&nbsp;2022 – Jun&nbsp;2026)
+          <!-- Replaced invalid citation link with a plain citation marker.  The original href pointed to an internal reference used in the problem description and would result in a broken link on the website. -->
+          <span class="citation">[1]</span>.
+          Francis plans to pursue graduate studies in engineering with a focus on machine learning and inverse problems.
         </p>
         <p>
           <span id="publications"></span>
@@ -85,7 +90,12 @@
           <li><em>Graph Neural Networks Meets Bird Swarm Algorithm</em> – a transformative approach to computational electrocatalyst discovery and optimization.</li>
           <li><em>E2Nebula</em> – a physics‑equivariant framework for generalizable machine learning interatomic potentials.</li>
           <li><em>Unveiling Magnetic Order in 2D Materials</em> via AI‑assisted exploration of the C2DB database.</li>
-          <li><em>Next‑Generation Small Modular Pressurized Water Reactors</em> for sustainable nuclear energy<a href="【904323187696576†L139-L174】" class="citation">[2]</a>.</li>
+          <li>
+            <em>Next‑Generation Small Modular Pressurized Water Reactors</em>
+            for sustainable nuclear energy
+            <!-- Replaced invalid citation link with a plain citation marker.  The original href pointed to an internal reference used in the problem description and would result in a broken link on the website. -->
+            <span class="citation">[2]</span>.
+          </li>
         </ul>
       </div>
       <!-- Skills content -->
@@ -151,7 +161,13 @@
     </div>
   </div>
   <div class="attribution">
-    <small>Website design adapted from <a href="https://web.stanford.edu/~bohg/" target="_blank" style="color: rgb(0, 153, 220);">Jeannette Bohg’s page</a>【474907660462925†L71-L115】, using elements inspired by <a href="http://cassidoo.co/" target="_blank" style="color: rgb(255, 68, 107);">Cassidy&nbsp;Williams</a>.  The hero image depicts an electrical engineering lab station and is licensed under CC BY‑SA&nbsp;2.0【904323187696576†L139-L174】.  Citations appear as numbered links [1], [2] throughout the text.</small>
+    <!-- Rewrote the attribution text to remove broken citation references.  The original contained links to numeric markers that referred back to the problem description and were not meaningful on the deployed website.  We retain the acknowledgements and licence information while using plain text citations. -->
+    <small>
+      Website design adapted from <a href="https://web.stanford.edu/~bohg/" target="_blank" style="color: rgb(0, 153, 220);">Jeannette&nbsp;Bohg’s page</a>, using elements inspired by
+      <a href="http://cassidoo.co/" target="_blank" style="color: rgb(255, 68, 107);">Cassidy&nbsp;Williams</a>.
+      The hero image depicts an electrical engineering lab station and is licensed under CC&nbsp;BY‑SA&nbsp;2.0.
+      Citations appear as numbered links [1], [2] throughout the text.
+    </small>
   </div>
   <script src="script.js"></script>
 </body>
