--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <title>Jian‑Zhai Zhang</title>
+  <title>Jian Zhai (Francis) Zhang</title>
   <!-- Description and social metadata -->
-  <meta name="description" content="Jian‑Zhai Zhang – engineering & system science student focused on AI‑assisted materials design and computational optimization.">
+  <meta name="description" content="Jian Zhai (Francis) Zhang – engineering & system science student focused on AI‑assisted materials design and computational optimization.">
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:title" content="Jian‑Zhai Zhang">
+  <meta name="twitter:title" content="Jian Zhai (Francis) Zhang">
   <meta name="twitter:description" content="Engineering & system science student focused on AI, materials design and optimization.">
   <meta name="twitter:image" content="images/Francis.jpg">
-  <meta property="og:title" content="Jian‑Zhai Zhang">
+  <meta property="og:title" content="Jian Zhai (Francis) Zhang">
   <meta property="og:description" content="Undergraduated student in the department of engineering & system science at National Tsing Hua University, Taiwan.">
   <meta property="og:image" content="images/Francis.jpg">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
@@ -58,7 +58,7 @@
       <!-- Short bio content -->
       <div class="bio short show">
         <p style="line-height: 2;">
-          Jian‑Zhai (Francis) Zhang is currently pursuing a B.S. in 
+          Jian Zhai (Francis) Zhang is currently pursuing a B.S. in 
           <a class="animated-link" href="https://ess.site.nthu.edu.tw/" style="color: rgb(255, 165, 0);">Engineering &amp; System Science</a> 
           at 
           <a class="animated-link" href="https://nthu-en.site.nthu.edu.tw/" style="color: rgb(255, 165, 0);">National Tsing Hua University</a>. 
@@ -73,7 +73,7 @@
       <!-- Detailed bio content -->
       <div class="bio long">
         <p style="line-height: 2;">
-          Jian‑Zhai (Francis) Zhang was born in Miaoli, Taiwan, in 2004. He is currently pursuing a B.S. in 
+          Jian Zhai (Francis) Zhang was born in Miaoli, Taiwan, in 2004. He is currently pursuing a B.S. in 
           <a class="animated-link" href="https://ess.site.nthu.edu.tw/" style="color: rgb(255, 165, 0);">Engineering &amp; System Science</a> 
           at 
           <a class="animated-link" href="https://nthu-en.site.nthu.edu.tw/" style="color: rgb(255, 165, 0);">National Tsing Hua University</a>. 
@@ -102,7 +102,7 @@
       <!-- Researchs content -->
       <div class="bio research">
         <p style="line-height: 2.2;">
-          Jian‑Zhai (Francis) Zhang's academic interests include Inverse design, Particle swarm optimization, Genetic Algorithm, Quantum computation and design, and Applications of
+          Jian Zhai (Francis) Zhang's academic interests include Inverse design, Particle swarm optimization, Genetic Algorithm, Quantum computation and design, and Applications of
           <span style="display: inline; background: rgba(255, 165, 0, 0.7); padding: 2px 4px; border-radius: 2.5px;">Signal processing / Image processing / Human–Computer Interaction / Machine learning / Deep learning</span>
           in the realms of
           <span style="display: inline; background: rgba(0, 153, 220, 0.7); padding: 2px 4px; border-radius: 2.5px; color: #fff;">Formal science / Social science / Nature science / Clinical Medicine / Engineering</span>.
@@ -208,7 +208,7 @@
           </div>
           <div class="paper-content">
             <h3 class="paper-title">Example Paper Title</h3>
-            <p class="paper-authors"><strong>Jian‑Zhai Zhang</strong>, Co‑authors</p>
+            <p class="paper-authors"><strong>Jian Zhai Zhang</strong>, Co‑authors</p>
             <p class="paper-venue"><em>Conference</em>, 2025</p>
             <p class="paper-links">
               <a class="animated-link" href="#" target="_blank" rel="noopener">project page</a>
@@ -225,7 +225,7 @@
           </div>
           <div class="paper-content">
             <h3 class="paper-title">Another Example Research Entry</h3>
-            <p class="paper-authors"><strong>Jian‑Zhai Zhang</strong></p>
+            <p class="paper-authors"><strong>Jian Zhai Zhang</strong></p>
             <p class="paper-venue"><em>Preprint</em>, 2024</p>
             <p class="paper-links">
               <a class="animated-link" href="#" target="_blank" rel="noopener">arXiv</a>
@@ -243,7 +243,7 @@
           </div>
           <div class="paper-content">
             <h3 class="paper-title">Example Project Title</h3>
-            <p class="paper-authors"><strong>Jian‑Zhai Zhang</strong></p>
+            <p class="paper-authors"><strong>Jian Zhai Zhang</strong></p>
             <p class="paper-venue"><em>Personal project</em>, 2025</p>
             <p class="paper-links">
               <a class="animated-link" href="#" target="_blank" rel="noopener">project page</a>
