--- a/index.html
+++ b/index.html
@@ -116,22 +116,22 @@
           <div class="skill-card">
             <div class="skill-icon">{ }</div>
             <h3 class="skill-title">Programming Languages</h3>
-            <p class="skill-desc">Python, C</p>
+            <p class="skill-desc">Python(main), C, C++</p>
           </div>
           <div class="skill-card">
             <div class="skill-icon">🧠</div>
             <h3 class="skill-title">ML Libraries</h3>
-            <p class="skill-desc">PyTorch, TensorFlow, AtomAI, scikit‑learn</p>
+            <p class="skill-desc">PyTorch(main), TensorFlow, AtomAI, scikit‑learn</p>
           </div>
           <div class="skill-card">
             <div class="skill-icon">📊</div>
             <h3 class="skill-title">Data Analysis</h3>
-            <p class="skill-desc">MATLAB, R, NumPy, SciPy, Pandas</p>
+            <p class="skill-desc">MATLAB, R, NumPy, SciPy, Pandas, Jupyter Notebook</p>
           </div>
           <div class="skill-card">
             <div class="skill-icon">📈</div>
             <h3 class="skill-title">Visualization</h3>
-            <p class="skill-desc">MATLAB, Matplotlib, Seaborn</p>
+            <p class="skill-desc">MATLAB, Matplotlib, Seaborn, Plotly Dash</p>
           </div>
           <div class="skill-card">
             <div class="skill-icon">🧪</div>
