--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <meta property="og:description" content="Undergraduated student in the department of engineering & system science at National Tsing Hua University, Taiwan.">
   <meta property="og:image" content="images/Francis.jpg">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
+  <!-- Favicon: penguin emoji -->
+  <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ctext y='0.9em' font-size='90'%3E🐧%3C/text%3E%3C/svg%3E">
   <link rel="stylesheet" href="style.css">
   
 </head>
