--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
           </div>
           <div class="skill-card">
             <div class="skill-icon">⚙️</div>
-            <h3 class="skill-title">CAD &amp; Simulation</h3>
+            <h3 class="skill-title">EDA &amp; Simulation</h3>
             <p class="skill-desc">HSPICE, Cadence Virtuoso</p>
           </div>
           <div class="skill-card">
