--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
     </div>
     <!-- Navigation links for different sections.  Feel free to jump to anchors. -->
     <div class="links">
-      <a href="#" style="color: rgb(255, 165, 0);">Scholar</a>
-      <a href="#research" style="color: rgb(74, 74, 77);">Researchs</a>
-      <a href="#" style="color: rgb(74, 74, 77);">Github</a>
-      <a href="#" style="color: rgb(0, 153, 220);">Twitter</a>
+      <a id="link-scholar" href="#" style="color: rgb(255, 165, 0);">Scholar</a>
+      <a href="#research" style="color: rgb(74, 74, 77);">Research</a>
+      <a id="link-github" href="#" style="color: rgb(74, 74, 77);">Github</a>
+      <a href="https://x.com/fphillipsoff" style="color: rgb(0, 153, 220);">Twitter</a>
       <a href="#" style="color: rgb(0, 153, 220);">Bluesky</a>
       <a href="https://youtu.be/YQZEoZ4W0ac?si=Yt2K5QQlIYbt_nLi" style="color: rgb(0, 153, 220);">OnlyFans</a>
       <a href="mailto:Frank20040506@gapp.nthu.edu.tw" style="color: rgb(100, 205, 104);">Email</a>
-      <a href="#"  style="color: rgb(255, 68, 107);">CV</a>
+      <a id="link-cv" href="#"  style="color: rgb(255, 68, 107);">CV</a>
     </div>
     <!-- Biography switcher.  Buttons allow the reader to toggle between short bio, detailed bio, projects and skills. -->
     <div class="bio-switcher">
@@ -258,6 +258,8 @@
       </div>
     </section>
   </div>
+  <!-- Bottom snackbar for temporary notices -->
+  <div id="snackbar" class="snackbar" role="status" aria-live="polite">Coming soon</div>
   <div class="attribution">
     <!-- Rewrote the attribution text to remove broken citation references.  The original contained links to numeric markers that referred back to the problem description and were not meaningful on the deployed website.  We retain the acknowledgements and licence information while using plain text citations. -->
     <small>
