--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
     <!-- Research section -->
     <section id="research" class="research-section">
       <div class="section-header">
-        <h2 class="section-title">Research</h2>
+        <h2 class="section-title">Research...coming soon</h2>
         <div class="filter-toggle">
           <label class="switch">
             <input type="checkbox" id="filters-enabled" checked>
