--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <title>Jian Zhai (Francis) Zhang</title>
   <!-- Description and social metadata -->
   <meta name="description" content="Jian Zhai (Francis) Zhang – engineering & system science student focused on AI‑assisted materials design and computational optimization.">
