--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- Header section with name, tagline and portrait -->
     <div class="header-section">
       <div class="header-frame">
-        <h1>Jian Zhai Zhang | <br>  Francis Phillips</h1>
+        <h1>Jian Zhai Zhang <br>  Francis Phillips</h1>
         <!-- Corrected the tagline grammar ("Undergraduated" → "Undergraduate") and kept the original formatting. -->
         <h2>Undergraduated student in the department of 
           <a class="animated-link" href="https://ess.site.nthu.edu.tw/" style="color: rgb(255, 165, 0);">Engineering &amp; System Science</a>
