--- a/index.html
+++ b/index.html
@@ -4,15 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <title>Jian Zhai (Francis) Zhang</title>
-  <!-- Description and social metadata -->
-  <meta name="description" content="Jian Zhai (Francis) Zhang – engineering & system science student focused on AI‑assisted materials design and computational optimization.">
-  <meta name="twitter:card" content="summary">
-  <meta name="twitter:title" content="Jian Zhai (Francis) Zhang">
-  <meta name="twitter:description" content="Engineering & system science student focused on AI, materials design and optimization.">
-  <meta name="twitter:image" content="images/Francis.jpg">
-  <meta property="og:title" content="Jian Zhai (Francis) Zhang">
-  <meta property="og:description" content="Undergraduated student in the department of engineering & system science at National Tsing Hua University, Taiwan.">
-  <meta property="og:image" content="images/Francis.jpg">
+
   <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
   <!-- Favicon: penguin emoji -->
   <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ctext y='0.9em' font-size='90'%3E🐧%3C/text%3E%3C/svg%3E">
@@ -24,7 +16,10 @@
     <!-- Header section with name, tagline and portrait -->
     <div class="header-section">
       <div class="header-frame">
-        <h1>Jian Zhai Zhang <br>  Francis Phillips</h1>
+        <h1>
+          <span id="name-primary" class="name-primary" data-alt="張洊翟">Jian Zhai Zhang</span>
+          <span class="name-secondary">Francis Phillips</span>
+        </h1>
         <!-- Corrected the tagline grammar ("Undergraduated" → "Undergraduate") and kept the original formatting. -->
         <h2>Undergraduated student in the department of 
           <a class="animated-link" href="https://ess.site.nthu.edu.tw/" style="color: rgb(255, 165, 0);">Engineering &amp; System Science</a>
@@ -177,7 +172,7 @@
     <!-- Research section -->
     <section id="research" class="research-section">
       <div class="section-header">
-        <h2 class="section-title">Research...coming soon</h2>
+        <h2 class="section-title">Research <br>Coming soon...</h2>
         <div class="filter-toggle">
           <label class="switch">
             <input type="checkbox" id="filters-enabled" checked>
