--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="header-section">
       <div class="header-frame">
         <h1>
-          <span id="name-primary" class="name-primary" data-alt="張洊翟">Jian Zhai Zhang</span>
+          <span id="name-primary" class="name-primary" data-alt="張洊翟" data-phonetic="ㄓㄤ  ㄐㄧㄢˋ ㄓㄜˊ">Jian Zhai Zhang</span>
           <span class="name-secondary">Francis Phillips</span>
         </h1>
         <!-- Corrected the tagline grammar ("Undergraduated" → "Undergraduate") and kept the original formatting. -->
@@ -197,7 +197,8 @@
         </div>
       </nav>
 
-      <div class="papers" data-list="publication">
+      <div class="research-lists">
+        <div class="papers" data-list="publication">
         <!-- Template entry. Duplicate and replace content as needed. -->
         <article class="paper research-entry" data-type="publication" data-year="2025" data-tags="machine-learning,deep-learning">
           <div class="paper-thumb" aria-hidden="true">
@@ -230,10 +231,10 @@
             <p class="paper-abstract">A brief teaser for the work. Replace with the actual highlight.</p>
           </div>
         </article>
-      </div>
-      
-      <!-- Projects list -->
-      <div class="projects" data-list="project" hidden>
+        </div>
+        
+        <!-- Projects list -->
+        <div class="projects" data-list="project" hidden>
         <article class="paper research-entry" data-type="project" data-year="2025" data-tags="human-computer-interaction,optimization">
           <div class="paper-thumb" aria-hidden="true">
             <div class="thumb-placeholder">No image</div>
@@ -250,6 +251,7 @@
             <p class="paper-abstract">Short description of the project and its impact.</p>
           </div>
         </article>
+        </div>
       </div>
     </section>
   </div>
