--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           <div class="skill-card">
             <div class="skill-icon">{ }</div>
             <h3 class="skill-title">Programming Languages</h3>
-            <p class="skill-desc">Python(main), C, C++</p>
+            <p class="skill-desc">Python (main), C, C++, HTML, CSS, JavaScript</p>
           </div>
           <div class="skill-card">
             <div class="skill-icon">🧠</div>
@@ -159,6 +159,11 @@
             <div class="skill-icon">⏱️</div>
             <h3 class="skill-title">Time–Frequency Analysis</h3>
             <p class="skill-desc">Fourier Transform, Hilbert Transform, Laplace Transform, Wavelet Transform, Filter Design</p>
+          </div>
+          <div class="skill-card">
+            <div class="skill-icon">👄</div>
+            <h3 class="skill-title">Language</h3>
+            <p class="skill-desc">Taiwanese Mandarin (Native), English (Proficient), Spanish (kindergarten), Taiwanese Hakka, Taiwanese Hokkien</p>
           </div>
         </div>
       </div>
