--- a/index.html
+++ b/index.html
@@ -167,6 +167,30 @@
           </div>
         </div>
       </div>
+      
+      <!-- Interests content -->
+      <div class="bio interests">
+        <div class="about-list">
+          <div class="about-row">
+            <div class="about-label">Drama &amp; movie</div>
+            <div class="about-content">
+              I enjoy exploring different forms of Drama and movie. I’m an avid fan of science fiction and mystery series, and I’ll occasionally indulge in modern soap operas when I want something lighthearted.
+            </div>
+          </div>
+          <div class="about-row">
+            <div class="about-label">Music</div>
+            <div class="about-content">
+              Favorites include Lady Gaga, Sia, Coldplay, The Chainsmokers, and Imagine Dragons.
+            </div>
+          </div>
+          <div class="about-row">
+            <div class="about-label">Outdoors</div>
+            <div class="about-content">
+              When I’m not immersed in a good show or music, I love spending time outdoors—hiking through scenic trails and mountains, cycling to discover new places, and gazing at the night sky to admire the stars.
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <!-- Dark‑mode toggler sits outside of content and floats in the top right corner. -->
     <div class="dark-mode-toggler">
